package practica1.gestordeportivo;

import practica1.gestordeportivo.views.CLIView;

public class SportsManager {
    
    public static void main(String[] args) {
        new CLIView().initialize();
    }
}