package practica1.gestordeportivo.utils.team;

public class TeamList {
    
}
