package practica1.gestordeportivo.views;

abstract class View {
    abstract void view();
}
